Fix cta buttons overflowing the page on small screens

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -86,11 +86,14 @@
             background-color: $color-secondary;
             border-color: $color-secondary;
             height: 10rem;
-            width: 30rem;
+            min-width: 20rem;
+            max-width: 30rem;
+            width: 100%;
             line-height: 10rem;
             font-size: 3rem;
             font-weight: 300;
-            margin: 1rem;
+            padding: 0;
+            margin-right: 1rem;
 
             &:focus,&:hover {
                 background-color: $color-primary;
